# organ-transplant-env

./: Dockerfile  README.md  inference.py  inference_results.json  openenv.yaml  pyproject.toml  requirements.txt
app/: environment.py  main.py
baseline/: run_baseline.py
server/: app.py
